@@ -28,3 +28,7 @@ KS_MISSING_IGNORE = 1
 SELINUX_DISABLED = 0
 SELINUX_ENFORCING = 1
 SELINUX_PERMISSIVE = 2
+
+KS_SCRIPT_PRE = 0
+KS_SCRIPT_POST = 1
+KS_SCRIPT_TRACEBACK = 2
